--- a/index.html
+++ b/index.html
@@ -1,25 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>羊悦管 - 羊场管理系统</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
-<body class="bg-gray-50 text-gray-900">
-    <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<body>
+  <h1>羊悦管 系统测试页面</h1>
+  <p>如果你看到这行字，说明 GitHub Pages 是正常的。</p>
 </body>
-</html>
