--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<body>
-  <h1>羊悦管 系统测试页面</h1>
-  <p>如果你看到这行字，说明 GitHub Pages 是正常的。</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <title>羊悦管 - 羊场管理系统</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Tailwind（可以保留，简单好看） -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- 自己的样式 -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body class="bg-gray-50 p-6">
+
+  <h1 class="text-2xl font-bold mb-4">🐑 羊悦管 · 羊场管理系统</h1>
+
+  <div id="app" class="bg-white p-4 rounded shadow">
+    <!-- JS 会把内容渲染到这里 -->
+  </div>
+
+  <script src="app.js"></script>
 </body>
+</html>
